[gd_scene load_steps=3 format=3 uid="uid://dne2wlqq26qc2"]

[ext_resource type="Script" path="res://addons/editorscript-launcher/panel/launchpad.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b1qpmtgvunbe4" path="res://addons/editorscript-launcher/panel/update_icon_white.svg" id="2_1amul"]

[node name="Launchpad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxLeft" type="VBoxContainer" parent="ScrollContainer/HBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Reload" type="Button" parent="ScrollContainer/HBox/VBoxLeft"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("2_1amul")
expand_icon = true

[node name="Spacer" type="Label" parent="ScrollContainer/HBox"]
layout_mode = 2

[node name="BasicButtons" type="VFlowContainer" parent="ScrollContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ComplexButtons" type="HBoxContainer" parent="ScrollContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ScrollContainer/HBox/VBoxLeft/Reload" to="." method="_on_reload_pressed"]
